@@ -6,7 +6,6 @@ import com.baeksutalchul.hiddendoor.error.exception.CustomException;
 import com.baeksutalchul.hiddendoor.res.ResponseDto;
 import com.baeksutalchul.hiddendoor.reservation.domain.Reservation;
 import com.baeksutalchul.hiddendoor.reservation.repository.ReservationRepository;
-import com.baeksutalchul.hiddendoor.theme.domain.Theme;
 import com.baeksutalchul.hiddendoor.theme.repository.ThemeRepository;
 import com.baeksutalchul.hiddendoor.timeSlot.domain.TimeSlot;
 import com.baeksutalchul.hiddendoor.timeSlot.repository.TimeSlotRepository;
@@ -23,7 +22,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
@@ -42,11 +40,10 @@ public class ReservationService {
     private final Instant defaultInstant = Instant.parse("1970-01-01T00:00:00Z");
 
     public ReservationService(
-        ReservationRepository reservationRepository,
-        ModelMapper modelMapper,
-        ThemeRepository themeRepository,
-        TimeSlotRepository timeSlotRepository
-    ) {
+            ReservationRepository reservationRepository,
+            ModelMapper modelMapper,
+            ThemeRepository themeRepository,
+            TimeSlotRepository timeSlotRepository) {
         this.reservationRepository = reservationRepository;
         this.modelMapper = modelMapper;
         this.themeRepository = themeRepository;
@@ -57,14 +54,16 @@ public class ReservationService {
         List<Reservation> reservationList = reservationRepository.findAll();
 
         List<ReservationDto> reservationDtoList = reservationList.stream()
-            .map(reservation -> {
-                ReservationDto reservationDto = modelMapper.map(reservation, ReservationDto.class);
-                reservationDto.setKstResDate(DateTimeUtil.convertToKoreanDateTime(reservation.getReservationDate()));
-                reservationDto.setKstResCreDate(DateTimeUtil.convertToKoreanDate(reservation.getReservationCreDate()));
-                reservationDto.setKstPayDate(DateTimeUtil.convertToKoreanDate(reservation.getPaymentDate()));
-                return reservationDto;
-            })
-            .toList();
+                .map(reservation -> {
+                    ReservationDto reservationDto = modelMapper.map(reservation, ReservationDto.class);
+                    reservationDto
+                            .setKstResDate(DateTimeUtil.convertToKoreanDateTime(reservation.getReservationDate()));
+                    reservationDto
+                            .setKstResCreDate(DateTimeUtil.convertToKoreanDate(reservation.getReservationCreDate()));
+                    reservationDto.setKstPayDate(DateTimeUtil.convertToKoreanDate(reservation.getPaymentDate()));
+                    return reservationDto;
+                })
+                .toList();
 
         return new ResponseDto<>(reservationDtoList, "예약 데이터 반환");
     }
@@ -96,33 +95,30 @@ public class ReservationService {
         LocalDate startDate = LocalDate.now();
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
         return IntStream.range(0, days)
-            .mapToObj(startDate::plusDays)
-            .map(date -> date.format(formatter))
-            .toList();
+                .mapToObj(startDate::plusDays)
+                .map(date -> date.format(formatter))
+                .toList();
     }
 
     public ResponseDto<Map<String, Object>> getAvailableTimeSlots(String date, String themeId) {
-        LocalDate localDate;
-        try {
-            localDate = LocalDate.parse(date);
-        } catch (DateTimeParseException e) {
-            throw new CustomException(ErrorCode.INVALID_DATE_FORMAT, "잘못된 날짜 형식입니다.");
-        }
-
-        Optional<TimeSlot> timeSlotOptional = timeSlotRepository.findByThemeIdAndDate(themeId, localDate);
+        // XXX:
+        // timeSlotRepository.findByThemeIdAndDate(themeId,localDate).orElseThrow(null);
+        // 형태로 변경해 주세요.
+        // orElseThrow 메서드 안에는 CustomerException(ErrorCode.~~) 형태로 사용하시면 됩니다.
+        Optional<TimeSlot> timeSlotOptional = timeSlotRepository.findByThemeIdAndDate(themeId, date);
         if (timeSlotOptional.isEmpty()) {
             throw new CustomException(ErrorCode.TIME_SLOT_NOT_FOUND, "해당 테마와 날짜에 예약 가능한 시간이 없습니다.");
         }
 
         TimeSlot timeSlot = timeSlotOptional.get();
         List<Map<String, Object>> availableTimeSlots = timeSlot.getSlots().stream()
-            .map(slot -> {
-                Map<String, Object> slotInfo = new HashMap<>();
-                slotInfo.put("time", slot.getTime());
-                slotInfo.put("isAvailable", !slot.isBooked());
-                return slotInfo;
-            })
-            .collect(Collectors.toList());
+                .map(slot -> {
+                    Map<String, Object> slotInfo = new HashMap<>();
+                    slotInfo.put("time", slot.getTime());
+                    slotInfo.put("isAvailable", !slot.isBooked());
+                    return slotInfo;
+                })
+                .toList();
 
         Map<String, Object> responseData = new HashMap<>();
         responseData.put("timeSlots", availableTimeSlots);
@@ -132,21 +128,22 @@ public class ReservationService {
     @Transactional
     public ResponseDto<ReservationDto> createReservation(ReservationDto dto) {
         String themeId = dto.getThemeId();
-        LocalDate reservationDate;
+        String reservationDate = dto.getReservationDate().substring(0, 10);
+
         try {
-            reservationDate = LocalDate.parse(dto.getReservationDate().split("T")[0]);
+            LocalDate.parse(reservationDate);
         } catch (DateTimeParseException e) {
             throw new CustomException(ErrorCode.INVALID_DATE_FORMAT, "잘못된 날짜 형식입니다.");
         }
 
         String reservationTime = dto.getReservationTime();
         TimeSlot timeSlot = timeSlotRepository.findByThemeIdAndDate(themeId, reservationDate)
-            .orElseThrow(() -> new CustomException(ErrorCode.TIME_SLOT_NOT_FOUND));
+                .orElseThrow(() -> new CustomException(ErrorCode.TIME_SLOT_NOT_FOUND));
 
         TimeSlot.TimeSlotDetail selectedSlot = timeSlot.getSlots().stream()
-            .filter(slot -> slot.getTime().equals(reservationTime) && !slot.isBooked())
-            .findFirst()
-            .orElseThrow(() -> new CustomException(ErrorCode.ALREADY_RESERVED));
+                .filter(slot -> slot.getTime().equals(reservationTime) && !slot.isBooked())
+                .findFirst()
+                .orElseThrow(() -> new CustomException(ErrorCode.ALREADY_RESERVED));
 
         // 예약 처리
         selectedSlot.setBooked(true);
@@ -189,7 +186,7 @@ public class ReservationService {
 
     public ResponseDto<ReservationDto> getReservationSummary(String reservationNumber) {
         Reservation reservation = reservationRepository.findByReservationNumber(reservationNumber)
-            .orElseThrow(() -> new CustomException(ErrorCode.RESERVATION_NOT_FOUND, "예약을 찾을 수 없습니다."));
+                .orElseThrow(() -> new CustomException(ErrorCode.RESERVATION_NOT_FOUND, "예약을 찾을 수 없습니다."));
 
         ReservationDto reservationDto = modelMapper.map(reservation, ReservationDto.class);
         reservationDto.setKstResDate(DateTimeUtil.convertToKoreanDateTime(reservation.getReservationDate()));
